--- a/composer.json
+++ b/composer.json
@@ -6,26 +6,25 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "beyondcode/laravel-websockets": "^1.14",
         "fakerphp/faker": "^1.23",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "guzzlehttp/guzzle": "^7.9.1",
+        "laravel/framework": "^11.0",
+        "laravel/reverb": "^1.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.5",
-        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
-        "spatie/laravel-permission": "^6.4",
+        "spatie/laravel-permission": "^6.9",
         "tymon/jwt-auth": "^2.1",
-        "yajra/laravel-datatables": "9.0"
+        "yajra/laravel-datatables": "11.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.2.8",
+        "spatie/laravel-ignition": "^2.8"
     },
     "autoload": {
         "psr-4": {
