--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.9.1",
+        "laravel-notification-channels/webpush": "^9.0",
         "laravel/framework": "^11.0",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
