--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "guzzlehttp/guzzle": "^7.9.1",
         "laravel-notification-channels/webpush": "^9.0",
         "laravel/framework": "^11.0",
-        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.5",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-permission": "^6.9",
         "tymon/jwt-auth": "^2.1",
